--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -402,6 +402,27 @@ main_content %}
       >
     </div>
   </div>
+
+  <!-- Modal de Advertencia -->
+  <div id="warningModal" class="warning-modal" style="display: none;">
+    <div class="warning-modal-content">
+      <div class="warning-modal-header">
+        <svg class="warning-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path>
+          <line x1="12" y1="9" x2="12" y2="13"></line>
+          <line x1="12" y1="17" x2="12.01" y2="17"></line>
+        </svg>
+        <h3 id="warningModalTitle">Advertencia</h3>
+      </div>
+      <div class="warning-modal-body">
+        <p id="warningModalMessage"></p>
+        <ul id="warningModalList" style="display: none;"></ul>
+      </div>
+      <div class="warning-modal-footer">
+        <button class="warning-btn-close" id="closeWarningModal">Entendido</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="coordinates">
